# Arcsat

./: App.xaml  App.xaml.cs  BRIGHT_DATA_SETUP.md  Controle-Roncatin.csproj  Controle-Roncatin.sln  DEPLOY.md  DEPLOY_GUIDE.md  Dockerfile.railway  ERP_API_REFERENCE.md  FARIA_LIMA_ERP_SPECS.md  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  QUICK_DEPLOY.md  RAILWAY_DEPLOY.md  RAILWAY_FIX.md  RAILWAY_FIXES_APPLIED.md  RAILWAY_SERVICES.md  RAILWAY_SETUP.md  README.md  RUST_IMPLEMENTATION_EXAMPLE.rs  UPLOAD_NFE_README.md  build-backend.ps1  build-release.ps1  check-railway-services.ps1  dashboard-market-intelligence.html  database_schema.sql  deploy-railway.ps1  docker-compose.yml  git-push-deploy.ps1  index.html  quickstart.ps1  railway.json  railway.toml  test-market-intelligence.ps1
.github/workflows/: railway-deploy.yml
Components/: _Imports.razor
Components/Layout/: NavMenu.razor
Components/Pages/: Compras.razor  Estoque.razor  Home.razor  Metais.razor  Vendas.razor
ERP/: CONFIGURACAO-GITHUB.md  Cargo.toml  Dockerfile
ERP/.github/workflows/: deploy-railway.yml
ERP/backend/: .env.railway  Cargo.toml  build_errors.txt  compile_errors.txt  errors.txt  railway.json
ERP/backend/migrations/: 20240115000000_initial_sqlite.sql
ERP/backend/src/: cache.rs  db.rs  error.rs  lib.rs  main.rs
ERP/backend/src/middleware/: rate_limit.rs
ERP/backend/src/models/: mod.rs
ERP/backend/src/routes/: crm_v2.rs
ERP/frontend/: package-lock.json  package.json  railway.json  tailwind.config.cjs  tsconfig.json  tsconfig.widget.json  vite.config.ts  vite.widget.config.ts
ERP/frontend-wasm/: Cargo.toml
ERP/frontend/src/: App.tsx  index.css  main.tsx
ERP/frontend/src/components/auth/: LoginForm.tsx
ERP/frontend/src/components/layout/: AppShell.tsx  Sidebar.tsx  Topbar.tsx
ERP/frontend/src/context/: AuthContext.tsx
ERP/frontend/src/embed/: auth-context-provider.tsx  login-widget.tsx  widget.css
ERP/frontend/src/lib/api/: auth.ts  client.ts  crm.ts
ERP/frontend/src/pages/auth/: LoginPage.tsx
ERP/frontend/src/pages/crm/: AccountsPage.tsx  ActivitiesPage.tsx  ForecastPage.tsx  LeadsPage.tsx
ERP/frontend/src/pages/dashboard/: DashboardPage.tsx
ERP/frontend/src/sections/dashboard/: KPIOverview.tsx  PipelineGlance.tsx  TeamActivities.tsx
Models/: Compra.cs  Metal.cs  MovimentacaoEstoque.cs  Venda.cs
Services/: DatabaseService.cs
arcsat-backend/: .env.example  Cargo.toml  README.md
arcsat-backend/arcsat-api/: Cargo.toml
arcsat-backend/arcsat-api/src/: main.rs
arcsat-backend/arcsat-core/: Cargo.toml
arcsat-backend/arcsat-core/src/: config.rs  error.rs  lib.rs  types.rs
arcsat-backend/arcsat-crm/: Cargo.toml
arcsat-backend/arcsat-crm/src/: api.rs  insights.rs  lib.rs  models.rs
arcsat-backend/arcsat-market-intelligence/: Cargo.toml
arcsat-backend/arcsat-market-intelligence/src/: analysis.rs  api.rs  lib.rs  models.rs  proxy.rs  queue.rs  scrapers.rs
arcsat-backend/arcsat-worker/: Cargo.toml
arcsat-backend/arcsat-worker/src/: main.rs
arcsat-backend/migrations/: 001_market_intelligence.sql
assets/: index-C_EFUrZ1.css
scraper-service/: .env.example  Dockerfile  README.md  main.py  requirements.txt
wwwroot/: index.html
