[workspace]
resolver = "2"

members = [
    "arcsat-core",
    "arcsat-market-intelligence",
    "arcsat-erp",
    "arcsat-crm",
    "arcsat-api",
    "arcsat-worker",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Nícolas Ávila <dev@avilaops.com>"]
license = "Proprietary"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }
futures = "0.3"

# Web framework
axum = { version = "0.7", features = ["multipart", "ws"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
hyper = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utils
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Web scraping (usaremos no módulo market-intelligence)
scraper = "0.20"
reqwest = { version = "0.11", features = ["json", "cookies", "rustls-tls"] }
headless_chrome = "1.0"

# Redis para filas
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# Proxies
async-http-proxy = "1.2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
